--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,7 @@
 .btn.btn-ghost.lg\:hidden{
   background-color: #fff;
 }
+
+ul.menu.menu-horizontal.px-1.text-white.outfit.text-\[16px\].font-medium {
+  gap: 15px;
+}
