--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,14 @@
 ul.menu.menu-horizontal.px-1.text-white.outfit.text-\[16px\].font-medium {
   gap: 15px;
 }
+
+ul.menu.menu-sm.dropdown-content.bg-base-100.rounded-box.z-1.mt-3.w-52.p-2.shadow.outfit.text-\[16px\].font-semibold{
+  background: #f7f7f7;
+  width: 300px;
+  color: #444;  
+  padding-top: 30px;
+}
+
+li.hover\:text-\[\#9747ff\] a{
+  font-size: 18px;
+}
